# jemallocator

./: .gitmodules  Cargo.toml  build.rs
src/: lib.rs  pthread_atfork.c
