# This repo is a slightly modified version of tikv/jemallocator

[package]
name = "memapi-jemalloc-sys"
#         own ver+jemalloc ver-commits past ver-commit hash
version = "0.1.2+5.3.0-298-g70d4102f48dce2d5755e9139a15eeec606f97bff"
build = "build.rs"
links = "jemalloc"
license = "MIT OR Apache-2.0"
repository = "https://github.com/echohumm/jemallocator"
description = "FFI bindings to Jemalloc made for memapi."
edition = "2018"
rust-version = "1.56.0"

[badges]
maintenance = { status = "actively-developed" }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
    'cfg(jemallocator_docs)',
    'cfg(prefixed)',
] }

[dependencies]
libc = { version = "^0.2.106", default-features = false }

[build-dependencies]
cc = "^1.0.92"

[features]
default = ["background_threads_runtime_support"]
profiling = []
debug = []
background_threads_runtime_support = []
background_threads = [ "background_threads_runtime_support" ]
stats = []
unprefixed_malloc_on_supported_platforms = []
disable_initial_exec_tls = []
disable_cache_oblivious = []

[package.metadata.docs.rs]
rustdoc-args = [ "--cfg",  "jemallocator_docs" ]